<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/lockGesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lockGesture" />

    <Button
        android:id="@+id/selectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectBtn" />

    <Button
        android:id="@+id/splinesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splinesBtn" />

    <Button
        android:id="@+id/lineBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lineBtn" />

    <Button
        android:id="@+id/redPen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redPen" />

    <Button
        android:id="@+id/bluePen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluePen" />

    <Button
        android:id="@+id/lineStyleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lineStyleBtn" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveBtn" />

    <Button
        android:id="@+id/loadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadBtn" />

    <Button
        android:id="@+id/addSVGFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addSVGFile" />

    <Button
        android:id="@+id/undoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undoBtn" />

    <Button
        android:id="@+id/redoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redoBtn" />

</LinearLayout>